Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2484

md_stats not used or used incorrectly

XMLWordPrintable

    • 5826

      The stats maintained by the EXP_MD_COUNTER_INCREMENT in the md_ops member wrappers and stored in struct obd_device's md_stats are not used. The classes that implement the the md_ops interface (lmv and mdc) do not allocate the them and the classes that allocate them (mgs and mdt) do not implement md_ops. (This is not a terrible issue but it does add to the internal and external cognitive crud of lustre proc.)

      It should be easy to add these stats to lmv and mds but the value of doing so seems low. md_ops contains several groups of low-level function whose counts would be highly correlated and there are already counters in llite for the high level metadata operations.

      If they are to be enabled anywhere then EXP_MD_COUNTER_INCREMENT() should check exp->exp_obd->md_stats rather than exp->exp_obd->obd_stats; lprocfs_alloc_md_stats() should check that obd->obd_type->typ_md_ops is not NULL; and exp_md_stats should be used somewhere or removed.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: