LU-2484 mgs: Remove unused md_stats

Do not allocate md_stats or create /proc/.../MGS/md_stats for mgs
devices since they do not implement the md_ops interface.

Signed-off-by: John L. Hammond <jhammond@tacc.utexas.edu>
Change-Id: I8b417bc2433484a0e008ff9bf7fef69ba1e62416